# void-rs

./: .gitignore  Cargo.toml  README.md
src/: db.rs  main.rs  nbt.rs  registry_codec.json  status_response.json
src/login/: mod.rs
src/nbt/: mod.rs
src/protocol/: mod.rs  packet.rs  varint.rs
