[package]
name = "void-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.91"
argon2 = "0.5.3"
json = "0.12.4"
serde = { version = "1.0.214", features = ["derive"] }
surrealdb = { version = "2.0.4", features = ["kv-rocksdb"] }
tokio = { version = "1.41.0", features = ["full"] }
tokio-byteorder = "0.3.0"
