[package]
name = "void-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.91"
argon2 = "0.5.3"
chrono = "0.4.38"
fern = { version = "0.7.0", features = ["colored"] }
json = "0.12.4"
log = "0.4.22"
rand = "0.8.5"
serde = { version = "1.0.214", features = ["derive"] }
surrealdb = { version = "2.0.4", features = ["kv-rocksdb"] }
tokio = { version = "1.41.0", features = ["full"] }
tokio-byteorder = "0.3.0"
